# rei-graph

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.sh
.dgk/: project.toml
.github/skills/prd-to-plan/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: PRD.md  app-installation-prd.md  architecture.md  examples.md  install.md  mcp.md  multi-language-support-prd.md  ontology.md  project-isolation-prd.md  scan-first-workflow-prd.md  scan-progress-prd.md
examples/express_api/: README.md  package.json  tsconfig.json
examples/express_api/src/: app.ts  db.ts  middleware.ts  routes.ts  types.ts
examples/react_ts_app/: README.md  package.json  tsconfig.json
examples/react_ts_app/.dgk/: project.toml
examples/react_ts_app/src/: App.tsx  components.tsx  hooks.ts  types.ts  utils.ts
plans/: app-installation.md  dev-graph-kit.md  project-isolation.md  scan-first-workflow.md  scan-progress.md
scripts/: bundle_ingester.sh  patch_pyproject_for_release.py
tests/: conftest.py  test_dag_client.py  test_delete_project.py  test_dev.py  test_doctor.py  test_impact.py  test_init.py  test_mcp_command.py  test_mcp_server.py  test_memory_client.py  test_neo4j_client.py  test_plan_commands.py  test_progress.py  test_project_hash.py  test_query.py  test_scan.py  test_service.py  test_snapshot_client.py  test_snapshot_commands.py  test_update.py  test_version.py
