[project]
name = "rei-graph"
version = "0.1.0"
description = "Local-first developer memory + DAG execution layer for coding agents"
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["rei-cli"]

[dependency-groups]
dev = [
    "mcp>=1.27.0",
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/core", "packages/storage", "packages/cli", "packages/mcp_server"]

[tool.uv.sources]
rei-cli = { workspace = true }
rei-core = { workspace = true }
rei-storage = { workspace = true }
rei-mcp = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
